# amazonad-bot

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml.example  docker-compose.yml
crates/ads-api/: Cargo.toml
crates/ads-api/src/: config.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  db.rs  lib.rs  models.rs  notifier.rs  state.rs
crates/common/tests/: models_tests.rs  monitor_tests.rs  notifier_tests.rs  state_tests.rs
crates/dashboard/: Cargo.toml  README.md  tauri.conf.json
crates/dashboard-ui/: Cargo.toml  README.md  Trunk.toml  index.html
crates/dashboard-ui/src/: api.rs  app.rs  chart.rs  main.rs  models.rs
crates/dashboard-ui/src/components/: competitors.rs  frgap.rs  mod.rs  placement.rs  snapshot.rs  sov.rs
crates/dashboard/icons/: icon.icns
crates/dashboard/src/: commands.rs  main.rs  models.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: amazon_scraper.rs  bot.rs  config.rs  lib.rs  main.rs  monitor.rs
crates/scraper/tests/: config_tests.rs  scraper_tests.rs
deploy/: Makefile  ORACLE_SETUP.md  POPOS_SETUP.md  ads-monitor.service
docs/plans/: 2026-03-05-amazon-scraper-rewrite.md
migrations/: 001_initial_schema.sql
