[workspace]

[package]
name = "mts-dashboard-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlElement"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
