[package]
name = "mts-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
mts-common = { path = "../common" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = "0.9"
chromiumoxide_cdp = "0.9"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"
futures = { version = "0.3", default-features = false, features = ["std"] }
rand = "0.8"
reqwest = { version = "0.13", features = ["json", "gzip", "form", "cookies"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"
